web/skins/classic/css/base/skin.css
/* ... */
.navbar-btn {
  background-color:#95afc0;
  color:white;
  padding:4px;
  margin-right:8px;
  border:none;
}

.sidebar {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 0;
    overflow-x: hidden;
    overflow-y: auto;
    background-color: #f5f5f5;
    border-right: 1px solid #eeeeee;
}

.sidebar ul {
margin-right: 0;
margin-bottom: 20px;
margin-left: 0;
}

.nav-pills > li > a {
  border-radius: 0;
}

ul.nav.nav-pills.flex-column {
  background-color: #f5f5f5; 
}

.chosen-container {
text-align: left;
min-width: 11em;
}

.chosen-single,
.chosen-container,
.chosen-container-multi,
.chosen-results,
.chosen-search,
.chosen-drop,
.chosen-choices,
li.search-choice {
    font-size: inherit !important;
    border-radius:4px;
    border-color:rgb(200,200,200) !important ;
	
}

.reduced-text { 
   font-size:0.9em;
}

.glyphicon.glyphicon-dot:before {
    content: "\25cf";
    font-size: 1.5em;
    padding-right:5px;
}

.gi-1p5x{font-size: 1.5em;}
.gi-2x{font-size: 2em;}
.gi-3x{font-size: 3em;}
.gi-4x{font-size: 4em;}
.gi-5x{font-size: 5em;}

.fa:hover{
  color: black;
}

.filterBar {
  margin-top:5px;
  margin-bottom:5px;
}
   
.form-check-inline {
  display: inline-block;
}

#dropdown_storage+div,
#dropdown_reminder+div,
#dropdown_bandwidth+div {
  background-color:#485460;
}

#framesTable td:hover {
    cursor: pointer;
}

.zoom,
.zoom-console {
  transform-origin: 0% 50%;
  transform: scale(5); /* (arbitray zoom value - Note if the zoom is too large, it will go outside of the viewport) */
  position: sticky;
  z-index: 1001;
}

a.flip {
  float: right;
}

#content table.major .colDiskSpace {
  text-align: right;
}

#modalLogout .modal-dialog {
  height: 100%;
}
#modalLogout .modal-content {
  height: 90%;
}
#modalLogout .modal-body {
  overflow:auto;
}
#getAccountCircleHTML {
  padding: 4px 0 0 0;
}
#logoutButton {
  color: white;
  padding: 4px 10px 7px 10px;
}
#stateModalBtn {
  padding: 4px 10px 6px 10px;
}
#shutdownButton {
  padding: 4px 10px 4px 10px;
  color: white;
}
#shutdownButton i {
}
.imageFeed {
  margin: 0 auto;
  text-align: center;
  /*
  vertical-align: middle;
  */
  position: relative;
}
.imageFeed img,
.imageFeed video,
.imageFeed svg {
  margin: 0;
  padding: 0;
  border-radius: 0;
  display: block;
  width: 100%;
  /*
  height: 100%;
  */
  border: 2px solid #ffffff;
}
.imageFeed svg {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  background: none;
}
.monitor {
  position: relative;
}
.monitor:after {
  clear: both;
}

.monitor.idle img {
  border: 2px solid #ffffff;
}

.monitor.alarm img {
  border: 2px solid #ff0000;
}

.monitor.alert img {
  border: 2px solid #ffa500;
}
.monitor.alert {
  color: #ffa500;
  padding: 0;
  border-radius: 0;
  border: none;
}
.controlHeader {
  display: flex;
  flex-wrap: wrap;
}
/* to match chosen text input height */
.controlHeader input[type="text"] {
  height: 29px;
  padding: 2px 5px 4px 5px;
  margin-top:0;
}
@media screen and (max-width:767px) {
  .controlHeader {
    display: flex;
    flex-wrap: wrap;
  }
}
#fieldsTable ul.chosen-choices {
  max-height: 100px;
  overflow-y:auto;
}
.search .form-control {
  font-size: 100%;
}

button .material-icons {
  font-size: 18px;
}

/* input[type="search"]::-webkit-search-cancel-button {
  display: none;
} */

.tags-container {
  display: flex;
  flex-wrap: wrap;
  border: 1px solid;
  border-color: #ccc;
  border-radius: 4px;
  min-height: 35px;
  margin: 0.25rem 1rem 0.25rem 1rem;
}

.tag {
  background-color: #F0F0F0;
  border-radius: 12px;
  padding: 4px 8px;
  margin: 4px;
  display: flex;
  align-items: center;
}

.tag-text {
  margin-right: 4px;
}

.tag-remove {
  cursor: pointer;
  color: red;
}

.tag-input {
  height: 30px;
  margin-left: 8px;
  border: none;
  width: 100%;
}

.tag-input:focus {
  outline: none;
}

.tag-dropdown {
  vertical-align: center;
  margin-right: 8px;
  display: inline-block;
  flex-grow: 2;
}

.tag-dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 15;
  padding: 4px 0;
  overflow-y: auto;
  max-height: 800px;
}

.tag-dropdown-item {
  cursor: pointer;
  padding: 4px 8px;
  margin-bottom: 4px;
}

.tag-dropdown-item:hover {
  background-color: #dfdfdf;
}

.hlight{
  background:#dfdfdf;
}

.tag-input:focus + .tag-dropdown-content,
.tag-input + .tag-dropdown-content:active {
  display: block;
}

